--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -30,5 +30,5 @@ sphinx:
 python:
   version: 3.12
   install:
-#   - requirements: docs/requirements.txt
-    - name: sphinx-rtd-theme  # 修改为使用正确的字典格式
+   - requirements: docs/requirements.txt
+    
